src/cifra/gerado/CifraParser.py
# Generated from /home/lucas/Desktop/faculdade/compiladores/projetos/trabalho/cifra/gramatica/Cifra.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CifraParser ( Parser ):

    grammarFileName = "Cifra.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'tempo'", "'instrumento'", "'tom'", "'compasso'", 
                     "'/'", "'frase'", "'{'", "'}'", "'musica'", "'trilha'", 
                     "'volume'", "'toca'", "'repita'", "'marca'", "'espere'", 
                     "':'", "'['", "']'", "'pausa'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'|'", "'.'", "'~'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "MODO", "ALTURA", "NOTA_CLASSE", "PECA", "INT", "IDENT", 
                      "BARRA", "PONTO", "TIL", "STAC", "WS", "COMENTARIO_LINHA", 
                      "COMENTARIO_BLOCO" ]

    RULE_programa = 0
    RULE_configuracao = 1
    RULE_declaracao = 2
    RULE_musica = 3
    RULE_trilha = 4
    RULE_comando = 5
    RULE_evento = 6
    RULE_nota = 7
    RULE_acorde = 8
    RULE_pausa = 9
    RULE_percussao = 10
    RULE_duracao = 11
    RULE_figura = 12

    ruleNames =  [ "programa", "configuracao", "declaracao", "musica", "trilha", 
                   "comando", "evento", "nota", "acorde", "pausa", "percussao", 
                   "duracao", "figura" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    MODO=20
    ALTURA=21
    NOTA_CLASSE=22
    PECA=23
    INT=24
    IDENT=25
    BARRA=26
    PONTO=27
    TIL=28
    STAC=29
    WS=30
    COMENTARIO_LINHA=31
    COMENTARIO_BLOCO=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def musica(self):
            return self.getTypedRuleContext(CifraParser.MusicaContext,0)


        def EOF(self):
            return self.getToken(CifraParser.EOF, 0)

        def configuracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.ConfiguracaoContext)
            else:
                return self.getTypedRuleContext(CifraParser.ConfiguracaoContext,i)


        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(CifraParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return CifraParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = CifraParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 26
                self.configuracao()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 32
                self.declaracao()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.musica()
            self.state = 39
            self.match(CifraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfiguracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CifraParser.RULE_configuracao

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConfigTempoContext(ConfiguracaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ConfiguracaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CifraParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigTempo" ):
                return visitor.visitConfigTempo(self)
            else:
                return visitor.visitChildren(self)


    class ConfigInstrumentoContext(ConfiguracaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ConfiguracaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(CifraParser.IDENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigInstrumento" ):
                return visitor.visitConfigInstrumento(self)
            else:
                return visitor.visitChildren(self)


    class ConfigCompassoContext(ConfiguracaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ConfiguracaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CifraParser.INT)
            else:
                return self.getToken(CifraParser.INT, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigCompasso" ):
                return visitor.visitConfigCompasso(self)
            else:
                return visitor.visitChildren(self)


    class ConfigTomContext(ConfiguracaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ConfiguracaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOTA_CLASSE(self):
            return self.getToken(CifraParser.NOTA_CLASSE, 0)
        def MODO(self):
            return self.getToken(CifraParser.MODO, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigTom" ):
                return visitor.visitConfigTom(self)
            else:
                return visitor.visitChildren(self)



    def configuracao(self):

        localctx = CifraParser.ConfiguracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_configuracao)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = CifraParser.ConfigTempoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(CifraParser.T__0)
                self.state = 42
                self.match(CifraParser.INT)
                pass
            elif token in [2]:
                localctx = CifraParser.ConfigInstrumentoContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.match(CifraParser.T__1)
                self.state = 44
                self.match(CifraParser.IDENT)
                pass
            elif token in [3]:
                localctx = CifraParser.ConfigTomContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(CifraParser.T__2)
                self.state = 46
                self.match(CifraParser.NOTA_CLASSE)
                self.state = 47
                self.match(CifraParser.MODO)
                pass
            elif token in [4]:
                localctx = CifraParser.ConfigCompassoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.match(CifraParser.T__3)
                self.state = 49
                self.match(CifraParser.INT)
                self.state = 50
                self.match(CifraParser.T__4)
                self.state = 51
                self.match(CifraParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(CifraParser.IDENT, 0)

        def evento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.EventoContext)
            else:
                return self.getTypedRuleContext(CifraParser.EventoContext,i)


        def getRuleIndex(self):
            return CifraParser.RULE_declaracao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = CifraParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(CifraParser.T__5)
            self.state = 55
            self.match(CifraParser.IDENT)
            self.state = 56
            self.match(CifraParser.T__6)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 78249984) != 0):
                self.state = 57
                self.evento()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(CifraParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MusicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trilha(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.TrilhaContext)
            else:
                return self.getTypedRuleContext(CifraParser.TrilhaContext,i)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CifraParser.ComandoContext,i)


        def getRuleIndex(self):
            return CifraParser.RULE_musica

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMusica" ):
                return visitor.visitMusica(self)
            else:
                return visitor.visitChildren(self)




    def musica(self):

        localctx = CifraParser.MusicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_musica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(CifraParser.T__8)
            self.state = 66
            self.match(CifraParser.T__6)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 67
                    self.trilha()
                    self.state = 70 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                pass
            elif token in [8, 12, 13, 14, 15, 17, 19, 21, 23, 26]:
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 78311424) != 0):
                    self.state = 72
                    self.comando()
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 80
            self.match(CifraParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrilhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(CifraParser.IDENT, 0)

        def INT(self):
            return self.getToken(CifraParser.INT, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CifraParser.ComandoContext,i)


        def getRuleIndex(self):
            return CifraParser.RULE_trilha

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrilha" ):
                return visitor.visitTrilha(self)
            else:
                return visitor.visitChildren(self)




    def trilha(self):

        localctx = CifraParser.TrilhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_trilha)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(CifraParser.T__9)
            self.state = 83
            self.match(CifraParser.IDENT)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 84
                self.match(CifraParser.T__10)
                self.state = 85
                self.match(CifraParser.INT)


            self.state = 88
            self.match(CifraParser.T__6)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 78311424) != 0):
                self.state = 89
                self.comando()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self.match(CifraParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CifraParser.RULE_comando

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ComandoEspereContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(CifraParser.IDENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoEspere" ):
                return visitor.visitComandoEspere(self)
            else:
                return visitor.visitChildren(self)


    class ComandoTocaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(CifraParser.IDENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoToca" ):
                return visitor.visitComandoToca(self)
            else:
                return visitor.visitChildren(self)


    class ComandoMarcaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(CifraParser.IDENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoMarca" ):
                return visitor.visitComandoMarca(self)
            else:
                return visitor.visitChildren(self)


    class ComandoRepitaContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CifraParser.INT, 0)
        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CifraParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CifraParser.ComandoContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoRepita" ):
                return visitor.visitComandoRepita(self)
            else:
                return visitor.visitChildren(self)


    class ComandoEventoContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def evento(self):
            return self.getTypedRuleContext(CifraParser.EventoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoEvento" ):
                return visitor.visitComandoEvento(self)
            else:
                return visitor.visitChildren(self)



    def comando(self):

        localctx = CifraParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17, 19, 21, 23, 26]:
                localctx = CifraParser.ComandoEventoContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.evento()
                pass
            elif token in [12]:
                localctx = CifraParser.ComandoTocaContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(CifraParser.T__11)
                self.state = 99
                self.match(CifraParser.IDENT)
                pass
            elif token in [13]:
                localctx = CifraParser.ComandoRepitaContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.match(CifraParser.T__12)
                self.state = 101
                self.match(CifraParser.INT)
                self.state = 102
                self.match(CifraParser.T__6)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 78311424) != 0):
                    self.state = 103
                    self.comando()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.match(CifraParser.T__7)
                pass
            elif token in [14]:
                localctx = CifraParser.ComandoMarcaContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 110
                self.match(CifraParser.T__13)
                self.state = 111
                self.match(CifraParser.IDENT)
                pass
            elif token in [15]:
                localctx = CifraParser.ComandoEspereContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.match(CifraParser.T__14)
                self.state = 113
                self.match(CifraParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CifraParser.RULE_evento

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EventoPercussaoContext(EventoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.EventoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def percussao(self):
            return self.getTypedRuleContext(CifraParser.PercussaoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventoPercussao" ):
                return visitor.visitEventoPercussao(self)
            else:
                return visitor.visitChildren(self)


    class EventoPausaContext(EventoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.EventoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pausa(self):
            return self.getTypedRuleContext(CifraParser.PausaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventoPausa" ):
                return visitor.visitEventoPausa(self)
            else:
                return visitor.visitChildren(self)


    class EventoAcordeContext(EventoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.EventoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def acorde(self):
            return self.getTypedRuleContext(CifraParser.AcordeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventoAcorde" ):
                return visitor.visitEventoAcorde(self)
            else:
                return visitor.visitChildren(self)


    class EventoNotaContext(EventoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.EventoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def nota(self):
            return self.getTypedRuleContext(CifraParser.NotaContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventoNota" ):
                return visitor.visitEventoNota(self)
            else:
                return visitor.visitChildren(self)


    class EventoBarraContext(EventoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CifraParser.EventoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BARRA(self):
            return self.getToken(CifraParser.BARRA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventoBarra" ):
                return visitor.visitEventoBarra(self)
            else:
                return visitor.visitChildren(self)



    def evento(self):

        localctx = CifraParser.EventoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_evento)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                localctx = CifraParser.EventoNotaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.nota()
                pass
            elif token in [17]:
                localctx = CifraParser.EventoAcordeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.acorde()
                pass
            elif token in [19]:
                localctx = CifraParser.EventoPausaContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.pausa()
                pass
            elif token in [23]:
                localctx = CifraParser.EventoPercussaoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.percussao()
                pass
            elif token in [26]:
                localctx = CifraParser.EventoBarraContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 120
                self.match(CifraParser.BARRA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALTURA(self):
            return self.getToken(CifraParser.ALTURA, 0)

        def duracao(self):
            return self.getTypedRuleContext(CifraParser.DuracaoContext,0)


        def STAC(self):
            return self.getToken(CifraParser.STAC, 0)

        def getRuleIndex(self):
            return CifraParser.RULE_nota

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNota" ):
                return visitor.visitNota(self)
            else:
                return visitor.visitChildren(self)




    def nota(self):

        localctx = CifraParser.NotaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nota)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(CifraParser.ALTURA)
            self.state = 124
            self.match(CifraParser.T__15)
            self.state = 125
            self.duracao()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 126
                self.match(CifraParser.STAC)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AcordeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def duracao(self):
            return self.getTypedRuleContext(CifraParser.DuracaoContext,0)


        def ALTURA(self, i:int=None):
            if i is None:
                return self.getTokens(CifraParser.ALTURA)
            else:
                return self.getToken(CifraParser.ALTURA, i)

        def STAC(self):
            return self.getToken(CifraParser.STAC, 0)

        def getRuleIndex(self):
            return CifraParser.RULE_acorde

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAcorde" ):
                return visitor.visitAcorde(self)
            else:
                return visitor.visitChildren(self)




    def acorde(self):

        localctx = CifraParser.AcordeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_acorde)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(CifraParser.T__16)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.match(CifraParser.ALTURA)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==21):
                    break

            self.state = 135
            self.match(CifraParser.T__17)
            self.state = 136
            self.match(CifraParser.T__15)
            self.state = 137
            self.duracao()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 138
                self.match(CifraParser.STAC)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PausaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def duracao(self):
            return self.getTypedRuleContext(CifraParser.DuracaoContext,0)


        def getRuleIndex(self):
            return CifraParser.RULE_pausa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPausa" ):
                return visitor.visitPausa(self)
            else:
                return visitor.visitChildren(self)




    def pausa(self):
